feat: Scrollable left pane

--- a/index.html
+++ b/index.html
@@ -373,6 +373,18 @@
         .fullscreen-btn.active {
             background: rgba(255, 215, 0, 0.8);
         }
+		
+		.scrollable-panel::-webkit-scrollbar {
+			width: 10px;
+		}
+		.scrollable-panel::-webkit-scrollbar-thumb {
+			background: rgba(0,0,0,0.2);
+			border-radius: 999px;
+		}
+		.scrollable-panel::-webkit-scrollbar-thumb:hover {
+			background: rgba(0,0,0,0.35);
+		}
+
     </style>
 </head>
 <body>
@@ -2534,7 +2546,9 @@
                     
                     <div style={{ maxWidth: '1600px', margin: '0 auto', padding: '24px', display: 'grid', gridTemplateColumns: '320px 1fr 350px', gap: '24px' }}>
                         {/* Left Panel - Image & Drawing Controls */}
-                        <div className="card" style={{ padding: '24px', height: 'fit-content' }}>
+						<div className="card" style={{ padding: '24px' }}>
+							<div className="scrollable-panel">
+
                             <h2 style={{ fontSize: '20px', fontWeight: 'bold', marginBottom: '20px', display: 'flex', alignItems: 'center', gap: '8px' }}>
                                 📁 Image & JSON Upload
                             </h2>
@@ -3157,7 +3171,9 @@
                                     </div>
                                 </div>
                             )}
-                        </div>
+							</div> {/* end scrollable-panel */}
+						</div>   {/* end left card */}
+
                         
                         {/* Main Canvas */}
                         <div className="card" style={{ padding: '24px', minHeight: '650px' }}>
