redo the keyboard shortcuts
the "upload images for annotation" section should be shrink abit and put the "keyboard shortcuts" section under it.. "upload images for annotation" + "keyboard shortcuts" section max height same as both left and right panel

--- a/index.html
+++ b/index.html
@@ -2931,24 +2931,68 @@
 
                         
                         {/* Main Canvas */}
-                        <div className="card" style={{ padding: '24px', minHeight: '650px' }}>
+                        <div className="card" style={{ padding: '24px', minHeight: '650px', display: 'flex', flexDirection: 'column' }}>
                             {!imagePreview ? (
-                                <div 
-                                    className={`drop-zone ${isDragging ? 'dragover' : ''}`}
-                                    onDragOver={handleDragOver}
-                                    onDragLeave={handleDragLeave}
-                                    onDrop={handleDrop}
-                                    onClick={() => fileInputRef.current?.click()}
-                                    style={{ height: '100%', display: 'flex', flexDirection: 'column', alignItems: 'center', justifyContent: 'center' }}
-                                >
-                                    <div style={{ fontSize: '64px', marginBottom: '16px' }}>🖼️</div>
-                                    <h3 style={{ fontSize: '24px', color: '#64748b', marginBottom: '8px' }}>
-                                        {isDragging ? 'Drop your vehicle images here!' : 'Upload images for annotation'}
-                                    </h3>
-                                    <p style={{ color: '#94a3b8' }}>Single image or entire folder</p>
-                                    <p style={{ color: '#cbd5e1', fontSize: '14px', marginTop: '16px' }}>
-                                        Supported formats: JPG, PNG, GIF, WebP
-                                    </p>
+                                <div style={{ display: 'flex', flexDirection: 'column', flex: 1 }}>
+                                    {/* Upload Drop Zone - compact */}
+                                    <div
+                                        className={`drop-zone ${isDragging ? 'dragover' : ''}`}
+                                        onDragOver={handleDragOver}
+                                        onDragLeave={handleDragLeave}
+                                        onDrop={handleDrop}
+                                        onClick={() => fileInputRef.current?.click()}
+                                        style={{ display: 'flex', flexDirection: 'column', alignItems: 'center', justifyContent: 'center', padding: '32px 24px', flex: '0 0 auto' }}
+                                    >
+                                        <div style={{ fontSize: '48px', marginBottom: '12px' }}>🖼️</div>
+                                        <h3 style={{ fontSize: '20px', color: '#64748b', marginBottom: '6px' }}>
+                                            {isDragging ? 'Drop your vehicle images here!' : 'Upload images for annotation'}
+                                        </h3>
+                                        <p style={{ color: '#94a3b8', fontSize: '13px', margin: 0 }}>Single image or entire folder</p>
+                                        <p style={{ color: '#cbd5e1', fontSize: '12px', marginTop: '8px', margin: '8px 0 0 0' }}>
+                                            Supported formats: JPG, PNG, GIF, WebP
+                                        </p>
+                                    </div>
+
+                                    {/* Keyboard Shortcuts */}
+                                    <div style={{
+                                        marginTop: '20px',
+                                        background: '#f8fafc',
+                                        border: '1px solid #e2e8f0',
+                                        borderRadius: '12px',
+                                        padding: '16px 20px',
+                                        flex: 1
+                                    }}>
+                                        <div style={{
+                                            fontSize: '14px',
+                                            fontWeight: 'bold',
+                                            marginBottom: '14px',
+                                            textAlign: 'center',
+                                            color: '#374151',
+                                            paddingBottom: '10px',
+                                            borderBottom: '2px solid #e5e7eb'
+                                        }}>
+                                            ⌨️ Keyboard Shortcuts
+                                        </div>
+                                        <div style={{
+                                            display: 'grid',
+                                            gridTemplateColumns: '1fr 1fr 1fr',
+                                            gap: '8px 28px',
+                                            fontSize: '12px',
+                                            color: '#374151'
+                                        }}>
+                                            <div><strong>Ctrl+Z:</strong> Undo</div>
+                                            <div><strong>Ctrl+Y:</strong> Redo</div>
+                                            <div><strong>Delete:</strong> Remove annotation</div>
+                                            <div><strong>1,2,3,4,5:</strong> Change type</div>
+                                            <div><strong>S:</strong> Select save directory</div>
+                                            <div><strong>Ctrl+S:</strong> Save JSON + Image</div>
+                                            <div><strong>W:</strong> Toggle drawing mode</div>
+                                            <div><strong>F:</strong> Fullscreen mode</div>
+                                            <div><strong>Escape:</strong> Cancel / Deselect</div>
+                                            <div><strong>Ctrl+Shift+S:</strong> Save all</div>
+                                            <div><strong>← →:</strong> Navigate (fullscreen)</div>
+                                        </div>
+                                    </div>
                                 </div>
                             ) : (
                                
@@ -4450,45 +4494,6 @@
                         )}
                     </div>
 
-                    {/* Keyboard Shortcuts - Centered below main canvas */}
-                    <div style={{ maxWidth: '1600px', margin: '0 auto', padding: '0 24px 24px 24px' }}>
-                        <div style={{
-                            maxWidth: '800px',
-                            margin: '0 auto',
-                            background: 'white',
-                            borderRadius: '16px',
-                            boxShadow: '0 4px 12px rgba(0,0,0,0.08)',
-                            padding: '16px 24px'
-                        }}>
-                            <div style={{
-                                fontSize: '14px',
-                                fontWeight: 'bold',
-                                marginBottom: '12px',
-                                textAlign: 'center',
-                                color: '#374151'
-                            }}>
-                                ⌨️ Keyboard Shortcuts
-                            </div>
-                            <div style={{
-                                display: 'grid',
-                                gridTemplateColumns: '1fr 1fr 1fr',
-                                gap: '6px 24px',
-                                fontSize: '11px'
-                            }}>
-                                <div><strong>Ctrl+Z:</strong> Undo last action</div>
-                                <div><strong>Ctrl+Y:</strong> Redo action</div>
-                                <div><strong>Delete/Backspace:</strong> Remove selected annotation</div>
-                                <div><strong>1,2,3,4,5:</strong> Change annotation type</div>
-                                <div><strong>S:</strong> Select save directory</div>
-                                <div><strong>Ctrl+S:</strong> Save JSON + Annotated Image</div>
-                                <div><strong>W:</strong> Toggle drawing mode</div>
-                                <div><strong>F:</strong> Enter fullscreen mode</div>
-                                <div><strong>Escape:</strong> Exit fullscreen / cancel / deselect</div>
-                                <div><strong>Ctrl+Shift+S:</strong> Save all annotated images</div>
-                                <div><strong>← →:</strong> Navigate images (in fullscreen)</div>
-                            </div>
-                        </div>
-                    </div>
 
                 </div>
             );
