restore the exact words

--- a/index.html
+++ b/index.html
@@ -3400,7 +3400,7 @@
                                 borderTop: '1px solid #e5e7eb'
                             }}>
                                 <div style={{ fontSize: '11px', fontWeight: 'bold', marginBottom: '6px', color: '#6b7280', textAlign: 'center' }}>
-                                    ⌨️ Shortcuts
+                                    ⌨️ Keyboard Shortcuts
                                 </div>
                                 <div style={{
                                     display: 'grid',
@@ -3409,17 +3409,17 @@
                                     fontSize: '10px',
                                     color: '#6b7280'
                                 }}>
-                                    <div><strong>Ctrl+Z</strong> Undo</div>
-                                    <div><strong>Ctrl+Y</strong> Redo</div>
-                                    <div><strong>Del</strong> Remove</div>
-                                    <div><strong>1-5</strong> Change type</div>
-                                    <div><strong>S</strong> Save dir</div>
-                                    <div><strong>Ctrl+S</strong> Save</div>
-                                    <div><strong>W</strong> Draw</div>
-                                    <div><strong>F</strong> Fullscreen</div>
-                                    <div><strong>Esc</strong> Cancel</div>
-                                    <div><strong>Ctrl+⇧+S</strong> Save all</div>
-                                    <div><strong>← →</strong> Navigate</div>
+                                    <div><strong>Ctrl+Z:</strong> Undo last action</div>
+                                    <div><strong>Ctrl+Y:</strong> Redo action</div>
+                                    <div><strong>Delete/Backspace:</strong> Remove selected annotation</div>
+                                    <div><strong>1,2,3,4,5:</strong> Change selected annotation type</div>
+                                    <div><strong>S:</strong> Select save directory</div>
+                                    <div><strong>Ctrl+S:</strong> Save JSON + Annotated Image</div>
+                                    <div><strong>W:</strong> Toggle drawing mode</div>
+                                    <div><strong>F:</strong> Enter fullscreen mode</div>
+                                    <div><strong>Escape:</strong> Exit fullscreen, cancel drawing, or deselect</div>
+                                    <div><strong>Ctrl+Shift+S:</strong> Save all annotated images</div>
+                                    <div><strong>← →:</strong> Navigate images (in fullscreen)</div>
                                 </div>
                             </div>
                         </div>
