Change Folder/Directory to Image Folder

--- a/index.html
+++ b/index.html
@@ -2380,7 +2380,7 @@
                                 {/* Directory Upload - Compact */}
                                 <div style={{ marginBottom: '8px', padding: '8px', background: '#f0f9ff', borderRadius: '6px', border: '1px solid #0ea5e9' }}>
                                     <div style={{ fontSize: '10px', color: '#0c4a6e', marginBottom: '4px', fontWeight: 'bold', display: 'flex', alignItems: 'center', gap: '4px' }}>
-                                        📁 Folder/Directory
+                                        📁 Image Folder
                                     </div>
                                     <div style={{ position: 'relative' }}>
                                         <input 
@@ -2408,7 +2408,7 @@
                                                 fontSize: '11px'
                                             }}
                                         >
-                                            {imageDirectory.length > 0 ? `📁 ${imageDirectory.length} images` : '📁 Choose Folder'}
+                                            {imageDirectory.length > 0 ? `📁 ${imageDirectory.length} images` : '📁 Choose Image Folder'}
                                         </label>
                                     </div>
                                 </div>
@@ -4451,6 +4451,7 @@
     </script>
 </body>
 </html>
+
 
 
 
